[package]
name = "smoljpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "crossbeam-deque", "crossbeam-channel"] }
image = "0.24.9"
turbojpeg = {version = "1.0", features = ["image"]}
